# modular-gptoss-mxfp4

./: .gitignore  .mojo-import-paths  .mxfp4-package-path  AGENTS.md  MXFP4_DEV_NOTES.md  kgen.trace.json.time-events.txt  kgen.trace.json.time-trace  pixi.toml
.agents/: ExecPlan_MXFP4.md  OVERVIEW.md  PLANS.md
.agents/exec_plans/: 2026-02-06_first_principles_reset.md  2026-02-06_weight_loading_and_rs_notes.md  2026-02-07_progress_journal.md  ExecPlan_Hopper_MXFP4_PackDecode_SM90.md  ExecPlan_MXFP4.md  ExecPlan_ModuleV3_MXFP4_MoE.md  gpt_oss_mxfp4.md  mxfp4_eager_profiling.md  mxfp4_register_decode.md
.agents/ref_docs/: GPT_OSS_OVERVIEW.md  MXFP4.md  MXFP4_KEY_TAKEAWAYS.md
.agents/ref_docs/explainers/: 1d-convolution-op-max-graph.md  1d-convolution-op-pytorch.md  1d-convolution.md  2d-blocks.md  2d-map.md  advanced-warp-patterns.md  async-memory-operations-copy-overlap.md  attention-op.md  axis-sum.md  bank-conflicts.md  block-level-programming.md  blocks.md  broadcast.md  cli-max-benchmark-command-for-measuring-model-server-performance.md  cli-max-cli-command-reference-and-usage-guide.md  cli-max-cli-reference-max-serve-command.md  cli-max-warm-cache-cli-command-reference.md  cli-reference-for-the-max-encode-cli-command.md  cli-reference-guide-for-the-max-generate-cli-command.md  dot-product.md  embedding-op.md  gpu-cluster-programming-sm90.md  gpu-debugging-workflow.md  gpu-functional-programming-patterns.md  gpu-occupancy-optimization.md  gpu-performance-profiling.md  gpu-synchronization-primitives.md  guards.md  index.md  kbench-gpu-profiling-with-nsight-systems-for-max-framework.md  kbench-kbench-a-benchmarking-toolkit-for-mojo-kernels.md  kbench-kernel-profiling-with-nvidia-nsight-compute.md  kbench-kprofile-tool-for-profiling-kbench-output-pickle-files.md  kbench-using-kplot-to-generate-bar-plots-from-kbench-results.md  kernel-fusion-and-custom-backward-pass.md  map.md  matrix-multiplication-matmul.md  max-bring-your-own-fine-tuned-model-to-max-pipelines.md  max-build-an-mlp-block-as-a-reusable-module-in-max.md  max-build-custom-gpu-operations-for-max-graphs-with-mojo.md  (+18 more)
.agents/skills/debugging-mojo/: SKILL.md
.agents/skills/testing-mojo/: SKILL.md
docs/: ExecPlan_MXFP4.md
docs/eng-design/docs/: elementwise-ops.md  uwgmma-flash-decoding.md  wgmma-programming.md
examples/custom-models/: pixi.toml
examples/custom-models/gpt_oss_mxfp4/: __init__.py  arch.py  kernels.py  model.py  weight_adapters.py
examples/custom-models/profiles/: moe_w1_tokens64_ncu.ncu-rep  moe_w2_tokens64_ncu.ncu-rep
examples/custom-models/tests/: test_mxfp4_matmul.py  test_mxfp4_moe_reference.py
max/examples/custom-models/: pixi.toml  (+1 more)
max/kernels/src/Mogg/MOGGKernelAPI/: BUILD.bazel  MOGGKernelAPI.mojo  MXFP4Extension.mojo
max/kernels/src/custom_ops/mogg_mxfp4/: BUILD.bazel
max/kernels/src/custom_ops/mogg_mxfp4/mogg/: __init__.mojo  mxfp4_kernel.mojo
max/kernels/test/quantization/: BUILD.bazel  test_mxfp4_grouped_matmul.mojo
ref-docs/: FEATURE_OVERVIEW.md  GPT_OSS_OVERVIEW.md  MXFP4.md
scripts/: bench_mxfp4_matmul.py  mxfp4_build.sh  mxfp4_env.sh  stream_completion.sh
(+185 files in other folders)
