load("//bazel:api.bzl", "mojo_kgen_lib", "mojo_library")

package(default_visibility = ["//visibility:public"])

mogg_lib_deps = [
    "//max:kv_cache",
    "//max:layout",
    "//max:linalg",
    "//max:nn",
    "//max:quantization",
    "//max:tensor",
    "//max:compiler_internal",
    "//max:shmem",
    "@mojo//:stdlib",
]

mojo_kgen_lib(
    name = "MOGGKernelAPILib",
    srcs = glob(["**/*.mojo"], exclude=["MXFP4Extension.mojo"]),
    deps = mogg_lib_deps + ["//max:MOGGPrimitives"],
)

mojo_library(
    name = "MOGGKernelAPI",
    testonly = True,
    srcs = glob(["**/*.mojo"], exclude=["MXFP4Extension.mojo"]),
    validate_missing_docs = False,
    deps = mogg_lib_deps + ["//max:MOGGPrimitives"],
)

mojo_library(
    name = "MOGGMxfp4Extension",
    srcs = ["MXFP4Extension.mojo", "__init__.mojo"],
    deps = [
        "//max:compiler_internal",
        "//max:tensor",
        "@mojo//:stdlib",
        "//max/kernels/src/nn:nn",
    ],
)
