load("//bazel:api.bzl", "mojo_library")

package(default_visibility = ["//visibility:public"])

mojo_library(
    name = "mogg_mxfp4",
    srcs = glob(["mogg/*.mojo"]),
    deps = [
        "//max/kernels/src/nn:nn",
        "//max:compiler_internal",
        "//max:tensor",
        "@mojo//:stdlib",
    ],
)
